--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
     <div ng-show="view_state === 'map'">
       <h1><em>Achernar: Map View</em></h1>
       <div>
-        <canvas id="mapcanvas" height="600" width="851" 
+        <canvas id="mapcanvas" height="600" width="851"
                 ng-mousedown="map.mouseDown($event)"
                 ng-mousedown="map.mouseUp($event)"
                 ng-mousemove="map.mouseMove($event)"></canvas>
+      </div>
+      <div>
         <button type="button" class="btn btn-default"
                 ng-click=enterState('menu')>
           <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Back
