mapView: makes map draggable

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div>
         <canvas id="mapcanvas" height="600" width="851"
                 ng-mousedown="map.mouseDown($event)"
-                ng-mousedown="map.mouseUp($event)"
+                ng-mouseup="map.mouseUp($event)"
                 ng-mousemove="map.mouseMove($event)"></canvas>
       </div>
       <div>
