Changes name of main.js in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
   <!-- Achernar -->
-  <script src= "js/store.js"></script>
+  <script src= "js/main.js"></script>
 
   <!-- Babalonjs (not to be confused with babel) -->
   <script src="http://cdn.babylonjs.com/2-2/babylon.max.js"></script>
