Removing old cruft

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="http://cdn.babylonjs.com/2-2/babylon.max.js"></script>
 </head>
 <body>
-  <div ng-app="storeApp" ng-controller="storeController">
+  <div ng-app="mainApp" ng-controller="mainController">
     <div ng-show="view_state === 'loading'">
       <!-- Insert custom loading bar here -->
       <h1>Loading Achernar...</h1>
