Split Files: Pull gameplay stuff into one file
This moves all of the gameplay state related code out of the controller
and into a 'gameplayService'. Later we'll probably want to break out
other parts of that code into their own files.

This also renames map service.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!-- Achernar -->
   <script src="js/main.js"></script>
   <script src="js/mapService.js"></script>
+  <script src="js/gameplayService.js"></script>
 
   <!-- Babalonjs (not to be confused with babel) -->
   <script src="http://cdn.babylonjs.com/2-2/babylon.max.js"></script>
