--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!-- Achernar -->
   <script src="js/main.js"></script>
   <script src="js/mapService.js"></script>
+  <script src="js/physicsService.js"></script>
   <script src="js/gameplayService.js"></script>
 
   <!-- Babalonjs (not to be confused with babel) -->
