--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="js/main.js"></script>
   <script src="js/mapService.js"></script>
   <script src="js/physicsService.js"></script>
+  <script src="js/weaponsService.js"></script>
   <script src="js/gameplayService.js"></script>
 
   <!-- Babalonjs (not to be confused with babel) -->
