--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="js/mapService.js"></script>
   <script src="js/physicsService.js"></script>
   <script src="js/weaponService.js"></script>
+  <script src="js/ecsService.js"></script>
   <script src="js/gameplayService.js"></script>
 
   <!-- Babalonjs (not to be confused with babel) -->
