Pulls input service out of gameplay service

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="js/physicsService.js"></script>
   <script src="js/weaponService.js"></script>
   <script src="js/ecsService.js"></script>
+  <script src="js/inputService.js"></script>
   <script src="js/gameplayService.js"></script>
 
   <!-- Babalonjs (not to be confused with babel) -->
