--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script src="js/weaponService.js"></script>
   <script src="js/ecsService.js"></script>
   <script src="js/inputService.js"></script>
+  <script src="js/entitiesService.js"></script>
   <script src="js/gameplayService.js"></script>
 
   <!-- Babalonjs (not to be confused with babel) -->
