Activate collision system
This activates the janky collision system by including it on the page,
etc.

As of this commit, it still does not produce any output, so there's
still a ways to go re: debugging.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <script src="js/ecsService.js"></script>
   <script src="js/inputService.js"></script>
   <script src="js/entitiesService.js"></script>
+  <script src="js/collisionService.js"></script>
   <script src="js/gameplayService.js"></script>
-
   <!-- Babalonjs (not to be confused with babel) -->
   <!-- <script src="http://cdn.babylonjs.com/2-2/babylon.max.js"></script>
   -->
