Re-adds jQuerey

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- jQuerey - still needed for capturing input and dom stuff -->
+    <script src="lib/jquery-3.0.0.js"></script>
+
     <script src="js/main.js"></script>
     <script src="js/mapService.js"></script>
     <script src="js/physicsService.js"></script>
