Corrects filenames, moves babalon to the top
Though as of this commit, it's getting the strange "webgl not supported"
issue

--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
   <head>
     <!-- jQuerey - still needed for capturing input and dom stuff -->
     <script src="lib/jquery-3.0.0.js"></script>
-
-    <script src="js/main.js"></script>
-    <script src="js/mapService.js"></script>
-    <script src="js/physicsService.js"></script>
-    <script src="js/weaponService.js"></script>
-    <script src="js/ecsService.js"></script>
-    <script src="js/inputService.js"></script>
-    <script src="js/entitiesService.js"></script>
-    <script src="js/collisionService.js"></script>
-    <script src="js/gameplayService.js"></script>
     <!-- Babalonjs (not to be confused with babel) 
       TODO: Use CDN in web version, local in offline versions-->
     <!-- <script src="http://cdn.babylonjs.com/2-2/babylon.max.js"></script> -->
     <script src="lib/babylon.max.js"></script>
+
+    <script src="js/physics.js"></script>
+    <script src="js/weapon.js"></script>
+    <script src="js/ecs.js"></script>
+    <script src="js/input.js"></script>
+    <script src="js/entities.js"></script>
+    <script src="js/collision.js"></script>
+    <script src="js/gameplay.js"></script>
   </head>
   <body>
     <canvas id="gameCanvas" style="height:100%;width:100%">
