--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- <script src="http://cdn.babylonjs.com/2-2/babylon.max.js"></script> -->
     <script src="lib/babylon.max.js"></script>
 
+    <script src="js/damage.js"></script>
     <script src="js/physics.js"></script>
     <script src="js/weapon.js"></script>
     <script src="js/ecs.js"></script>
