Pulls system setup out into its own file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       TODO: Use CDN in web version, local in offline versions-->
     <!-- <script src="http://cdn.babylonjs.com/2-2/babylon.max.js"></script> -->
     <script src="lib/babylon.max.js"></script>
-
+    <script src="js/system.js"></script>
     <script src="js/map.js"></script>
     <script src="js/damage.js"></script>
     <script src="js/physics.js"></script>
