--- a/index.html
+++ b/index.html
@@ -16,3 +16,4 @@
     <script src="js/entities.js"></script>
     <script src="js/collision.js"></script>
     <script src="js/gameplay.js"></script>
+    <script src="js/load.js"></script>
