State manager compiles again
The major error here was that the update_all was taking a function of
(name, object) but I was only using it with (object) arrow functions.
The fix was to switch what was being passed.

--- a/index.html
+++ b/index.html
@@ -16,4 +16,6 @@
     <script src="js/entities.js"></script>
     <script src="js/collision.js"></script>
     <script src="js/gameplay.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/load.js"></script>
