--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="lib/babylon.max.js"></script>
     <script src="js/player.js"></script>
     <script src="js/states.js"></script>
+    <script src="js/landing.js"></script>
     <script src="js/system.js"></script>
     <script src="js/damage.js"></script>
     <script src="js/physics.js"></script>
