Adds skeleton for HUD

--- a/raw.html
+++ b/raw.html
@@ -19,6 +19,7 @@
     <script src="src/map.js"></script>
     <script src="src/entities.js"></script>
     <script src="src/collision.js"></script>
+    <script src="src/hud.js"></script>
     <script src="src/gameplay.js"></script>
     <script src="src/main.js"></script>
     <script src="src/load.js"></script>
