--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="js/map.js"></script>
     <script src="js/entities.js"></script>
     <script src="js/collision.js"></script>
+    <script src="js/hud.js"></script>
     <script src="js/gameplay.js"></script>
     <script src="js/main.js"></script>
     <script src="js/load.js"></script>
