--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/physics.js"></script>
     <script src="js/weapon.js"></script>
     <script src="js/ecs.js"></script>
+    <script src="js/ai.js"></script>
     <script src="js/input.js"></script>
     <script src="js/map.js"></script>
     <script src="js/entities.js"></script>
