--- a/raw.html
+++ b/raw.html
@@ -15,6 +15,7 @@
     <script src="src/physics.js"></script>
     <script src="src/weapon.js"></script>
     <script src="src/ecs.js"></script>
+    <script src="src/ai.js"></script>
     <script src="src/input.js"></script>
     <script src="src/map.js"></script>
     <script src="src/entities.js"></script>
