After some trial and error, AI now turns
in the correct direction

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       TODO: Use CDN in web version, local in offline versions-->
     <!-- <script src="http://cdn.babylonjs.com/2-2/babylon.max.js"></script> -->
     <script src="lib/babylon.max.js"></script>
+    <script src="js/util.js"></script>
     <script src="js/player.js"></script>
     <script src="js/states.js"></script>
     <script src="js/menu.js"></script>
