--- a/raw.html
+++ b/raw.html
@@ -6,6 +6,7 @@
       TODO: Use CDN in web version, local in offline versions-->
     <!-- <script src="http://cdn.babylonjs.com/2-2/babylon.max.js"></script> -->
     <script src="lib/babylon.max.js"></script>
+    <script src="src/util.js"></script>
     <script src="src/player.js"></script>
     <script src="src/states.js"></script>
     <script src="src/menu.js"></script>
