--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <script src="lib/jquery-3.0.0.js"></script>
     <!-- Babalonjs (not to be confused with babel) 
       TODO: Use CDN in web version, local in offline versions-->
-    <!-- <script src="http://cdn.babylonjs.com/2-2/babylon.max.js"></script> -->
-    <script src="lib/babylon.max.js"></script>
+    <script src="lib/babylon.custom.js"></script>
+    <!-- TODO: iterate over files in the js dir -->
     <script src="js/util.js"></script>
     <script src="js/player.js"></script>
     <script src="js/states.js"></script>
