Moves trade into its own file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/states.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/landing.js"></script>
+    <script src="js/trade.js"></script>
     <script src="js/system.js"></script>
     <script src="js/damage.js"></script>
     <script src="js/physics.js"></script>
