Porting from babel to vanilla js
Slightly different module syntax and adds the module attribute
to each script.

This caught some instances where I was using unimported modules.

There is a major regression though. Binding input for mouse dragging
in the map isn't working.

--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
       TODO: Use CDN in web version, local in offline versions-->
     <script src="lib/babylon.custom.js"></script>
     <!-- TODO: iterate over files in the js dir -->
-    <script src="js/util.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/states.js"></script>
-    <script src="js/menu.js"></script>
-    <script src="js/landing.js"></script>
-    <script src="js/shipyard.js"></script>
-    <script src="js/trade.js"></script>
-    <script src="js/system.js"></script>
-    <script src="js/damage.js"></script>
-    <script src="js/physics.js"></script>
-    <script src="js/weapon.js"></script>
-    <script src="js/ecs.js"></script>
-    <script src="js/ai.js"></script>
-    <script src="js/input.js"></script>
-    <script src="js/map.js"></script>
-    <script src="js/entities.js"></script>
-    <script src="js/collision.js"></script>
-    <script src="js/hud.js"></script>
-    <script src="js/gameplay.js"></script>
-    <script src="js/load.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="src/util.js"></script>
+    <script type="module" src="src/player.js"></script>
+    <script type="module" src="src/states.js"></script>
+    <script type="module" src="src/menu.js"></script>
+    <script type="module" src="src/landing.js"></script>
+    <script type="module" src="src/shipyard.js"></script>
+    <script type="module" src="src/trade.js"></script>
+    <script type="module" src="src/system.js"></script>
+    <script type="module" src="src/damage.js"></script>
+    <script type="module" src="src/physics.js"></script>
+    <script type="module" src="src/weapon.js"></script>
+    <script type="module" src="src/ecs.js"></script>
+    <script type="module" src="src/ai.js"></script>
+    <script type="module" src="src/input.js"></script>
+    <script type="module" src="src/map.js"></script>
+    <script type="module" src="src/entities.js"></script>
+    <script type="module" src="src/collision.js"></script>
+    <script type="module" src="src/hud.js"></script>
+    <script type="module" src="src/gameplay.js"></script>
+    <script type="module" src="src/load.js"></script>
+    <script type="module" src="src/main.js"></script>
