--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
+<body id=body>
     <canvas id="gameCanvas" style="height:100%;width:100%">
-    <!-- jQuerey - still needed for capturing input and dom stuff -->
-    <script src="lib/jquery-3.0.0.js"></script>
-    <!-- Babalonjs (not to be confused with babel) 
+    <!-- Babalonjs 
       TODO: Use CDN in web version, local in offline versions-->
     <script src="lib/babylon.custom.js"></script>
     <!-- TODO: iterate over files in the js dir -->
@@ -27,3 +26,4 @@
     <script type="module" src="src/gameplay.js"></script>
     <script type="module" src="src/load.js"></script>
     <script type="module" src="src/main.js"></script>
+</body>
