Refactors shipyard into a more generic store
The plan is to use this shared class for the
ship buy screen and the ship upgrade screen.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="module" src="src/states.js"></script>
     <script type="module" src="src/menu.js"></script>
     <script type="module" src="src/landing.js"></script>
+    <script type="module" src="src/store.js"></script>
     <script type="module" src="src/shipyard.js"></script>
     <script type="module" src="src/trade.js"></script>
     <script type="module" src="src/system.js"></script>
