Limit hyperspace jump distance
This is a traditional gameplay element for similar games. It adds
tension because it means you can't always hyperspace your way out

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script type="module" src="src/physics.js"></script>
     <script type="module" src="src/weapon.js"></script>
     <script type="module" src="src/ecs.js"></script>
+    <script type="module" src="src/hyperspace.js"></script>
     <script type="module" src="src/ai.js"></script>
     <script type="module" src="src/input.js"></script>
     <script type="module" src="src/map.js"></script>
