--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Babalonjs 
       TODO: Use CDN in web version, local in offline versions-->
     <script src="lib/babylon.custom.js"></script>
+    <script src="lib/matter.js"></script>
     <!-- TODO: iterate over files in the js dir -->
     <script type="module" src="src/util.js"></script>
     <script type="module" src="src/graphics.js"></script>
