--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script type="module" src="src/player.js"></script>
     <script type="module" src="src/states.js"></script>
     <script type="module" src="src/menu.js"></script>
+    <script type="module" src="src/mission.js"></script>
+    <script type="module" src="src/missions_menu.js"></script>
     <script type="module" src="src/landing.js"></script>
     <script type="module" src="src/store.js"></script>
     <script type="module" src="src/shipyard.js"></script>
