--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="src/player.js"></script>
     <script type="module" src="src/states.js"></script>
     <script type="module" src="src/menu.js"></script>
-    <script type="module" src="src/mission.js"></script>
+    <script type="module" src="src/missions.js"></script>
     <script type="module" src="src/missions_menu.js"></script>
     <script type="module" src="src/landing.js"></script>
     <script type="module" src="src/store.js"></script>
