--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="module" src="src/util.js"></script>
     <script type="module" src="src/graphics.js"></script>
     <script type="module" src="src/player.js"></script>
-    <script type="module" src="src/states.js"></script>
+    <script type="module" src="src/view_state.js"></script>
     <script type="module" src="src/menu.js"></script>
     <script type="module" src="src/missions.js"></script>
     <script type="module" src="src/missions_menu.js"></script>
@@ -18,6 +18,7 @@
     <script type="module" src="src/shipyard.js"></script>
     <script type="module" src="src/trade.js"></script>
     <script type="module" src="src/system.js"></script>
+    <script type="module" src="src/modal.js"></script>
     <script type="module" src="src/damage.js"></script>
     <script type="module" src="src/physics.js"></script>
     <script type="module" src="src/weapon.js"></script>
@@ -31,5 +32,6 @@
     <script type="module" src="src/hud.js"></script>
     <script type="module" src="src/gameplay.js"></script>
     <script type="module" src="src/load.js"></script>
+    <script type="module" src="src/states.js"></script>
     <script type="module" src="src/main.js"></script>
 </body>
