Adds a main menu

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script type="module" src="src/hud.js"></script>
     <script type="module" src="src/gameplay.js"></script>
     <script type="module" src="src/load.js"></script>
+    <script type="module" src="src/main_menu.js"></script>
     <script type="module" src="src/states.js"></script>
     <script type="module" src="src/main.js"></script>
 </body>
