Prepare for the move to 4.x

--- a/four.html
+++ b/four.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <body id=body>
     <canvas id="gameCanvas" style="height:100%;width:100%">
-    <!-- 
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
     <script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
-   -->
-    <script src="lib/babylon.custom.js"/>
+    <!-- <script src="lib/babylon.custom.js"/> -->
     <!-- TODO: iterate over files in the js dir -->
     <script type="module" src="src/singletons.js"></script>
     <script type="module" src="src/util.js"></script>
