--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <body id=body>
     <canvas id="gameCanvas" style="height:100%;width:100%">
-    <!-- 
-    <script src="https://cdn.babylonjs.com/babylon.js"></script>
-    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-    <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
-    <script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
-   -->
-    <script src="lib/babylon.custom.js"/>
+    <script src="lib/babylon.max.js"></script>
+    <script src="lib/babylonjs.loaders.js"></script>
+    <script src="lib/babylon.gui.js"></script>
     <!-- TODO: iterate over files in the js dir -->
     <script type="module" src="src/singletons.js"></script>
     <script type="module" src="src/util.js"></script>
