--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="module" src="src/player.js"></script>
     <script type="module" src="src/view_state.js"></script>
     <script type="module" src="src/menu.js"></script>
+    <script type="module" src="src/settings.js"></script>
     <script type="module" src="src/missions.js"></script>
     <script type="module" src="src/missions_menu.js"></script>
     <script type="module" src="src/landing.js"></script>
