Default Settings Adds a 'settings' entry into singletons, and a method to update it. '

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="lib/babylon.gui.js"></script>
     <!-- TODO: iterate over files in the js dir -->
     <script type="module" src="src/singletons.js"></script>
+    <script type="module" src="src/default_settings.js"></script>
     <script type="module" src="src/util.js"></script>
     <script type="module" src="src/graphics.js"></script>
     <script type="module" src="src/player.js"></script>
