--- a/index.html
+++ b/index.html
@@ -37,4 +37,54 @@
     <script type="module" src="src/main_menu.js"></script>
     <script type="module" src="src/states.js"></script>
     <script type="module" src="src/main.js"></script>
+    <script type="application/vertexShader"
+            id="starfield_vertex_shader"
+    >
+precision highp float;
+
+// Attributes
+attribute vec3 position;
+attribute vec3 normal;
+
+// Uniforms
+uniform mat4 world;
+uniform mat4 worldViewProjection;
+
+// Varying
+varying vec3 vPositionW;
+varying vec3 vNormalW;
+
+void main(void) {
+    vec4 outPosition = worldViewProjection * vec4(position, 1.0);
+    gl_Position = outPosition;
+    
+    vPositionW = vec3(world * vec4(position, 1.0));
+    vNormalW = normalize(vec3(world * vec4(normal, 0.0)));
+}
+    
+</script>
+    <script type="application/fragmentShader"
+            id="starfield_fragment_shader"
+    >
+precision highp float;
+
+// Lights
+varying vec3 vPositionW;
+varying vec3 vNormalW;
+
+// Refs
+uniform vec3 cameraPosition;
+uniform sampler2D textureSampler;
+
+void main(void) {
+    vec3 color = vec3(1., 1., 1.);
+    vec3 viewDirectionW = normalize(cameraPosition - vPositionW);
+
+    // Fresnel
+	float fresnelTerm = dot(viewDirectionW, vNormalW);
+	fresnelTerm = clamp(1.0 - fresnelTerm, 0., 1.);
+
+    gl_FragColor = vec4(color, 1.);
+}
+</script>
 </body>
