--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="module" src="src/singletons.js"></script>
     <script type="module" src="src/default_settings.js"></script>
     <script type="module" src="src/util.js"></script>
+    <script type="module" src="src/file_utils.js"></script>
     <script type="module" src="src/graphics.js"></script>
     <script type="module" src="src/player.js"></script>
     <script type="module" src="src/view_state.js"></script>
