Fighter spawn code
With tests

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="module" src="src/damage.js"></script>
     <script type="module" src="src/physics.js"></script>
     <script type="module" src="src/weapon.js"></script>
+    <script type="module" src="src/fighters.js"></script>
     <script type="module" src="src/ecs.js"></script>
     <script type="module" src="src/hyperspace.js"></script>
     <script type="module" src="src/ai.js"></script>
