Testing for tech
Adds tests to show if I'm using the wrong thing in tech fields

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script type="module" src="src/missions.js"></script>
     <script type="module" src="src/missions_menu.js"></script>
     <script type="module" src="src/landing.js"></script>
+    <script type="module" src="src/tech.js"></script>
     <script type="module" src="src/store.js"></script>
     <script type="module" src="src/shipyard.js"></script>
     <script type="module" src="src/trade.js"></script>
