Gets rid of the awful padding and scrolling
https://doc.babylonjs.com/babylon101/first#html-template

--- a/index.html
+++ b/index.html
@@ -1,44 +1,53 @@
 <!DOCTYPE html>
 <body id=body>
-    <canvas id="gameCanvas" style="height:100%;width:100%">
-    <script src="lib/babylon.max.js"></script>
-    <script src="lib/babylonjs.loaders.js"></script>
-    <script src="lib/babylon.gui.js"></script>
-    <!-- TODO: iterate over files in the js dir -->
-    <script type="module" src="src/singletons.js"></script>
-    <script type="module" src="src/default_settings.js"></script>
-    <script type="module" src="src/util.js"></script>
-    <script type="module" src="src/file_utils.js"></script>
-    <script type="module" src="src/graphics.js"></script>
-    <script type="module" src="src/player.js"></script>
-    <script type="module" src="src/view_state.js"></script>
-    <script type="module" src="src/menu.js"></script>
-    <script type="module" src="src/saves.js"></script>
-    <script type="module" src="src/settings.js"></script>
-    <script type="module" src="src/missions.js"></script>
-    <script type="module" src="src/missions_menu.js"></script>
-    <script type="module" src="src/landing.js"></script>
-    <script type="module" src="src/tech.js"></script>
-    <script type="module" src="src/store.js"></script>
-    <script type="module" src="src/shipyard.js"></script>
-    <script type="module" src="src/trade.js"></script>
-    <script type="module" src="src/system.js"></script>
-    <script type="module" src="src/modal.js"></script>
-    <script type="module" src="src/damage.js"></script>
-    <script type="module" src="src/physics.js"></script>
-    <script type="module" src="src/weapon.js"></script>
-    <script type="module" src="src/fighters.js"></script>
-    <script type="module" src="src/ecs.js"></script>
-    <script type="module" src="src/hyperspace.js"></script>
-    <script type="module" src="src/ai.js"></script>
-    <script type="module" src="src/input.js"></script>
-    <script type="module" src="src/map.js"></script>
-    <script type="module" src="src/entities.js"></script>
-    <script type="module" src="src/collision.js"></script>
-    <script type="module" src="src/hud.js"></script>
-    <script type="module" src="src/gameplay.js"></script>
-    <script type="module" src="src/load.js"></script>
-    <script type="module" src="src/main_menu.js"></script>
-    <script type="module" src="src/states.js"></script>
-    <script type="module" src="src/main.js"></script>
+	<style>
+	  html, body {
+			overflow: hidden;
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
+    }
+	</style>
+	<canvas id="gameCanvas" style="height:100%;width:100%">
+	<script src="lib/babylon.max.js"></script>
+	<script src="lib/babylonjs.loaders.js"></script>
+	<script src="lib/babylon.gui.js"></script>
+	<!-- TODO: iterate over files in the js dir -->
+	<script type="module" src="src/singletons.js"></script>
+	<script type="module" src="src/default_settings.js"></script>
+	<script type="module" src="src/util.js"></script>
+	<script type="module" src="src/file_utils.js"></script>
+	<script type="module" src="src/graphics.js"></script>
+	<script type="module" src="src/player.js"></script>
+	<script type="module" src="src/view_state.js"></script>
+	<script type="module" src="src/menu.js"></script>
+	<script type="module" src="src/saves.js"></script>
+	<script type="module" src="src/settings.js"></script>
+	<script type="module" src="src/missions.js"></script>
+	<script type="module" src="src/missions_menu.js"></script>
+	<script type="module" src="src/landing.js"></script>
+	<script type="module" src="src/tech.js"></script>
+	<script type="module" src="src/store.js"></script>
+	<script type="module" src="src/shipyard.js"></script>
+	<script type="module" src="src/trade.js"></script>
+	<script type="module" src="src/system.js"></script>
+	<script type="module" src="src/modal.js"></script>
+	<script type="module" src="src/damage.js"></script>
+	<script type="module" src="src/physics.js"></script>
+	<script type="module" src="src/weapon.js"></script>
+	<script type="module" src="src/fighters.js"></script>
+	<script type="module" src="src/ecs.js"></script>
+	<script type="module" src="src/hyperspace.js"></script>
+	<script type="module" src="src/ai.js"></script>
+	<script type="module" src="src/input.js"></script>
+	<script type="module" src="src/map.js"></script>
+	<script type="module" src="src/entities.js"></script>
+	<script type="module" src="src/collision.js"></script>
+	<script type="module" src="src/hud.js"></script>
+	<script type="module" src="src/gameplay.js"></script>
+	<script type="module" src="src/load.js"></script>
+	<script type="module" src="src/main_menu.js"></script>
+	<script type="module" src="src/states.js"></script>
+	<script type="module" src="src/main.js"></script>
 </body>
