--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script type="module" src="src/singletons.js"></script>
 	<script type="module" src="src/default_settings.js"></script>
 	<script type="module" src="src/util.js"></script>
+	<script type="module" src="src/graph_util.js"></script>
 	<script type="module" src="src/file_utils.js"></script>
 	<script type="module" src="src/graphics.js"></script>
 	<script type="module" src="src/beam_graphics.js"></script>
