--- a/index.html
+++ b/index.html
@@ -52,4 +52,5 @@
 	<script type="module" src="src/main_menu.js"></script>
 	<script type="module" src="src/states.js"></script>
 	<script type="module" src="src/main.js"></script>
+  <script type="module" src="src/plunder_menu.js"></script> 
 </body>
