--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<script type="module" src="src/store.js"></script>
 	<script type="module" src="src/shipyard.js"></script>
 	<script type="module" src="src/trade.js"></script>
+	<script type="module" src="src/comms.js"></script>
 	<script type="module" src="src/system.js"></script>
 	<script type="module" src="src/modal.js"></script>
 	<script type="module" src="src/damage.js"></script>
